feat: business search integrated
